--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -75,7 +75,9 @@
     .soldout {
       width: 140px;
       margin: 1em 0;
-      display: inline-block;
+      display: inline-flex;
+      justify-content: flex-start;
+      align-items: flex-end;
       background: rgba(224, 14, 14, 0.8);
       border: 1px solid rgba(224, 14, 14, 0.8);
       border-radius: 0.25em;
@@ -87,5 +89,20 @@
       font-weight: 700;
       text-align: center;
     }
+    // .soldout {
+    //   width: 140px;
+    //   margin: 1em 0;
+    //   display: inline-block;
+    //   background: rgba(224, 14, 14, 0.8);
+    //   border: 1px solid rgba(224, 14, 14, 0.8);
+    //   border-radius: 0.25em;
+    //   color: white;
+    //   padding: 0.375rem 0.75rem;
+    //   font-size: 1em;
+    //   border-radius: 0.25rem;
+    //   color: white;
+    //   font-weight: 700;
+    //   text-align: center;
+    // }
   }
 }
