update: set instance variables in controller and render those in ERB template

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -10,10 +10,10 @@
       <tbody>
         <tr>
           <td>
-            <%= Product.count%>
+            <%= @product_count%>
            </td>
           <td>
-            <%= Category.count%>
+            <%= @category_count%>
           </td>
         </tr>
       </tbody>
