--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -44,27 +44,39 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle text-danger"
-            href="#"
-            id="navbarDropdownAdmin"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Admin
-          </a>
-          <ul class="dropdown-menu dropdown-menu-dark">
-            <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-link" %></li>
-            <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
-            <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
-          </ul>
+
+        <li class="user-account">
+         <% if current_user %>
+            <li><a>Signed in as <%= current_user.first_name %></a></li> 
+            <li><%= link_to "Logout", '/logout', class: 'logout-link' %></li>
+          <% else %>
+           <li><%= link_to 'Login', '/login', class: 'login-link' %></li>
+           <li><%= link_to 'Signup', '/signup', class: 'signup-link' %></li>
+          <% end %>   
         </li>
+
+
         <li class="nav-item end-0">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
         </li>
+  <li class="nav-item dropdown">
+    <a
+      class="nav-link dropdown-toggle text-danger"
+      href="#"
+      id="navbarDropdownAdmin"
+      role="button"
+      data-bs-toggle="dropdown"
+      aria-expanded="false"
+    >
+      Admin
+    </a>
+    <ul class="dropdown-menu dropdown-menu-dark">
+      <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-link" %></li>
+      <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
+      <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
+    </ul>
+  </li>
       </ul>
     </div>
   </div>
