format: fix formatting of erb files

--- a/app/views/admin/products/_product.html.erb
+++ b/app/views/admin/products/_product.html.erb
@@ -17,6 +17,12 @@
     <%= product.quantity %>
   </td>
   <td>
-    <%= link_to fa_icon('trash'), [:admin, product], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= link_to fa_icon("trash"),
+    [:admin, product],
+    class: "btn btn-sm btn-danger",
+    method: :delete,
+    data: {
+      confirm: "Are you sure?"
+    } %>
   </td>
 </tr>
