--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -5,7 +5,7 @@
   </header>
 
   <div class="well">
-    <%= link_to '+ New Category', [:new, :admin, :category], class: 'btn btn-info' %>
+    <%= link_to "+ New Category", %i[new admin category], class: "btn btn-info" %>
   </div>
 
   <div class="panel panel-default products">
@@ -14,7 +14,7 @@
       <thead>
         <tr>
           <th colspan="2">Category</th>
-       
+
         </tr>
       </thead>
       <tbody>
