--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -5,7 +5,7 @@
   </header>
 
   <div class="well">
-    <%= link_to 'All Categories', [:admin, :categories], class: 'btn btn-info' %>
+    <%= link_to "All Categories", %i[admin categories], class: "btn btn-info" %>
   </div>
 
   <div class="row">
@@ -25,10 +25,10 @@
 
         <div class="form-group">
           <%= form.label :name %>
-          <%= form.text_field :name, class: 'form-control' %>
+          <%= form.text_field :name, class: "form-control" %>
         </div>
 
-        <%= form.submit 'Create Category', class: 'btn btn-primary' %>
+        <%= form.submit "Create Category", class: "btn btn-primary" %>
       <% end %>
     </div>
   </div>
