--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -5,7 +5,7 @@
   </header>
 
   <div class="well">
-    <%= link_to 'All Products', [:admin, :products], class: 'btn btn-info' %>
+    <%= link_to "All Products", %i[admin products], class: "btn btn-info" %>
   </div>
 
   <div class="row">
@@ -25,37 +25,42 @@
 
         <div class="form-group">
           <%= form.label :name %>
-          <%= form.text_field :name, class: 'form-control' %>
+          <%= form.text_field :name, class: "form-control" %>
         </div>
 
         <div class="form-group">
           <%= form.label :description %>
-          <%= form.text_area :description, class: 'form-control' %>
+          <%= form.text_area :description, class: "form-control" %>
         </div>
 
         <div class="form-group">
           <%= form.label :category %>
-          <%= form.select :category_id, options_from_collection_for_select(Category.all.order(:name), :id, :name), { include_blank: true }, class: 'form-control' %>
+          <%= form.select :category_id,
+                      options_from_collection_for_select(
+                        Category.all.order(:name),
+                        :id,
+                        :name
+                      ),
+                      { include_blank: true },
+                      class: "form-control" %>
         </div>
 
         <div class="form-group">
           <%= form.label :quantity %>
-          <%= form.number_field :quantity, class: 'form-control' %>
+          <%= form.number_field :quantity, class: "form-control" %>
         </div>
 
         <div class="form-group">
           <%= form.label :price %>
-          <%= form.text_field :price, class: 'form-control' %>
+          <%= form.text_field :price, class: "form-control" %>
         </div>
-
-
 
         <div class="form-group">
           <%= form.label :image %>
           <%= form.file_field :image %>
         </div>
 
-        <%= form.submit 'Create Product', class: 'btn btn-primary' %>
+        <%= form.submit "Create Product", class: "btn btn-primary" %>
       <% end %>
     </div>
   </div>
