--- a/app/views/carts/_item.html.erb
+++ b/app/views/carts/_item.html.erb
@@ -12,9 +12,13 @@
   </td>
   <td>
     <div>
-    <%= button_to remove_item_cart_path(product_id: product.id), class: 'btn btn-xs btn-danger' do %> - <% end %>
-    <%= quantity %>
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-xs btn-success' do %> + <% end %>
+      <%= button_to remove_item_cart_path(product_id: product.id), class: 'btn btn-xs btn-danger' do %>
+        -
+      <% end %>
+      <%= quantity %>
+      <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-xs btn-success' do %>
+        +
+      <% end %>
     </div>
   </td>
   <td>
