--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,7 +5,7 @@
     <h4>Your payment has been processed</h4>
   </header>
   <div class="order-summary jumbotron">
-  <h4>Order Summary</h4><br>
+    <h4>Order Summary</h4><br>
     <table class="table table-bordered">
       <thead>
         <tr>
@@ -15,15 +15,19 @@
         </tr>
       </thead>
       <tbody>
-      <% @order.line_items.each do |item| %>
-        <%= render 'line_item', product: item.product, quantity: item.quantity, total_line_price: item.total_price_cents %> 
-      <% end %>
+        <% @order.line_items.each do |item| %>
+          <%= render "line_item",
+          product: item.product,
+          quantity: item.quantity,
+          total_line_price: item.total_price_cents %>
+        <% end %>
       </tbody>
     </table>
-    <h4>Payment Total: <%=humanized_money_with_symbol @order.total_cents / 100.0%></h4>
-    <h6><%=@order.email%></h6>
+    <h4>Payment Total:
+      <%= humanized_money_with_symbol @order.total_cents / 100.0 %></h4>
+    <h6><%= @order.email %></h6>
   </div>
 
-  <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
+  <%= link_to "Continue Shopping", root_path, class: "btn btn-lg btn-primary" %>
 
 </section>
