--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,19 +1,19 @@
 <article>
   <%= link_to product_path(product) do %>
-    <%= image_tag product.image.thumb.url , alt: product.name %>
+    <%= image_tag product.image.thumb.url, alt: product.name %>
     <h1>
       <span><%= product.name %></span>
       <span><%= humanized_money_with_symbol product.price %></span>
     </h1>
-  <% end%>
+  <% end %>
   <div>
-  <% if (product.quantity == 0) %>
-  <span class="soldout">Sold Out</span>
-  <%else%>
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
+    <% if (product.quantity == 0) %>
+      <span class="soldout">Sold Out</span>
+    <% else %>
+      <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
     method: :post do %>
-      <%= fa_icon "shopping-cart", text: 'Add' %> 
+        <%= fa_icon "shopping-cart", text: "Add" %>
+      <% end %>
     <% end %>
-    <%end%>
   </div>
 </article>
