--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,21 +1,25 @@
 <section class="products-show">
   <header class="page-header">
-    <h1><%= link_to @product.category.name, @product.category %> &raquo; <%= @product.name %></h1>
+    <h1><%= link_to @product.category.name, @product.category %>
+      &raquo;
+      <%= @product.name %></h1>
   </header>
 
   <article class="product-detail">
-    <%= image_tag @product.image.url, class: 'main-img' %>
+    <%= image_tag @product.image.url, class: "main-img" %>
     <div>
       <h1><%= @product.name %></h1>
       <p><%= @product.description %></p>
       <div class="quantity">
-        <span><%= @product.quantity %> in stock at </span>
+        <span><%= @product.quantity %>
+          in stock at
+        </span>
         <span><%= humanized_money_with_symbol @product.price %></span>
       </div>
-      <div class="price">          
+      <div class="price">
         <%= button_to add_item_cart_path(product_id: @product.id), class: 'btn' , method: :post do %>
-          <%= fa_icon "shopping-cart", text: 'Add' %>
-        <% end %>          
+          <%= fa_icon "shopping-cart", text: "Add" %>
+        <% end %>
       </div>
     </div>
   </article>
